# emotion_system

./: .gitignore  .sonarlintignore  Cargo.toml  FOR_AI.md  README.md  pyproject.toml
BUG/: BUG-20260321-ocean-config-not-loaded.md  bug-report-2026-03-20_0824.md
bindings/nodejs/: Cargo.toml  emotion_nodejs.js  emotion_nodejs.win32-x64-msvc.node  package-lock.json  package.json  vitest.config.js
bindings/nodejs/src/: lib.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/src/: lib.rs
config/: default_behavior.json  default_events.json
core/: Cargo.toml
core/src/: config.rs  decay.rs  decay_schedule.rs  engine.rs  lib.rs  memory.rs  multi_agent.rs  persistence.rs  personality.rs  plutchik.rs  prompt.rs  rumination.rs  vad.rs
docs/: BUG_DOUBLE_APPLY.md  BUG_FIX_STATUS.md  FINAL_BUG_REPORT.md  TEST_LOG_OCEAN_LOADING.md  api_spec.md  emotion_config_schema.md  emotion_system_plan.md  future_plan.md  task.md  vad_core.md
docs/plans/: 2026-03-19-plutchik-emotion-model.md
python/emotion_engine/: __init__.py  brain_loop.py  bridge.py  engine.py  mcp_server.py  prompt_hook.py
python/emotion_engine/dashboard/: app.js  index.html  style.css
